--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
-        "vue": "^2.6.12"
+        "vue": "^2.6.12",
+        "vue-router": "^4.2.0"
     }
 }
